--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <div class="col-lg-4">
         <div class="row">
-            <div class="panel panel-default">
+            <div class="panel panel-default" style="width:95%">
               <div class="panel-heading">Lägg till maträtt</div>
               <div class="panel-body">
                 <div class="input-group">
@@ -76,7 +76,7 @@
     </div>
     <div class="col-lg-4">
         <div class="row">
-            <div class="panel panel-default" id="monPanel">
+            <div class="panel panel-default" id="monPanel" style="width:95%">
               <div class="panel-heading">
                 <span class="label label-primary">Måndag</span>
               </div>
@@ -86,17 +86,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="panel panel-default" id="tuePanel">
+            <div class="panel panel-default" id="tuePanel" style="width:95%">
               <div class="panel-heading">
                 <span class="label label-primary">Tisdag</span>
               </div>
               <div class="panel-body">
-                <p id="tueFoodId">William lagar spaghetti carbonara</p>
+                <p id="tueFoodId"></p>
               </div>
             </div>
         </div>
         <div class="row">
-            <div class="panel panel-default" id="wedPanel">
+            <div class="panel panel-default" id="wedPanel" style="width:95%">
               <div class="panel-heading">
               <span class="label label-primary">Onsdag</span>
               </div>
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="panel panel-default" id="thursPanel">
+            <div class="panel panel-default" id="thursPanel" style="width:95%">
               <div class="panel-heading">
               <span class="label label-primary">Torsdag</span>
               </div>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="panel panel-default" id="friPanel">
+            <div class="panel panel-default" id="friPanel" style="width:95%">
               <div class="panel-heading">
                 <span class="label label-primary">Fredag</span>
               </div>
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="panel panel-default" id="satPanel">
+            <div class="panel panel-default" id="satPanel" style="width:95%">
               <div class="panel-heading">
                 <span class="label label-primary">Lördag</span>
               </div>
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="panel panel-default" id="sunPanel">
+            <div class="panel panel-default" id="sunPanel" style="width:95%">
               <div class="panel-heading">
                 <span class="label label-primary">Söndag</span>
               </div>
