Weekday panels are now generated dynamically by js

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
       <p id="todayFoodId"></p>
     </div>
 
-    
-    
     <div class="col-lg-4">
         <div class="row">
             <div class="panel panel-default" style="width:95%">
@@ -75,76 +73,11 @@
         </div>
     </div>
     <div class="col-lg-4">
-        <div class="row">
-            <div class="panel panel-default" id="monPanel" style="width:95%">
-              <div class="panel-heading">
-                <span class="label label-primary">Måndag</span>
-              </div>
-              <div class="panel-body">
-                <p id="monFoodId"></p>
-              </div>
-            </div>
+        <div id="weekdayMenuId">
+
         </div>
-        <div class="row">
-            <div class="panel panel-default" id="tuePanel" style="width:95%">
-              <div class="panel-heading">
-                <span class="label label-primary">Tisdag</span>
-              </div>
-              <div class="panel-body">
-                <p id="tueFoodId"></p>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default" id="wedPanel" style="width:95%">
-              <div class="panel-heading">
-              <span class="label label-primary">Onsdag</span>
-              </div>
-              <div class="panel-body">
-                <p id="wedFoodId"></p>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default" id="thursPanel" style="width:95%">
-              <div class="panel-heading">
-              <span class="label label-primary">Torsdag</span>
-              </div>
-              <div class="panel-body">
-                <p id="thursFoodId"></p>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default" id="friPanel" style="width:95%">
-              <div class="panel-heading">
-                <span class="label label-primary">Fredag</span>
-              </div>
-              <div class="panel-body">
-                <p id="friFoodId"></p>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default" id="satPanel" style="width:95%">
-              <div class="panel-heading">
-                <span class="label label-primary">Lördag</span>
-              </div>
-              <div class="panel-body">
-                <p id="satFoodId"></p>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default" id="sunPanel" style="width:95%">
-              <div class="panel-heading">
-                <span class="label label-primary">Söndag</span>
-              </div>
-              <div class="panel-body">
-                <p id="sunFoodId"></p>
-              </div>
-            </div>
-        </div>
+
+        <script src="js/generateWeekdayPanels.js"></script>
     </div>
     <div class="col-lg-4">
     </div>
