--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
     
     <div class="container">
 
-    <div class="jumbotron">
-      <p id="todayFoodId"></p>
-    </div>
-
     <div class="col-lg-4">
-        <div class="row">
+        <!--<div class="row">
             <div class="panel panel-default" style="width:95%">
               <div class="panel-heading">Lägg till maträtt</div>
               <div class="panel-body">
@@ -68,7 +64,7 @@
                 <button type="button" class="btn btn-default" id="addFoodBtn">Lägg till</button>
               </div>
             </div>
-        </div>
+        </div>-->
     </div>
     <div class="col-lg-4">
         <div id="weekdayMenuId">
